--- a/views/song.erb
+++ b/views/song.erb
@@ -6,7 +6,8 @@
     <input name="_method" type="hidden" value="patch">
 
     <label for="name">Rename song</label>
-    <input id="name" name="name" type="text" required>
+    <input id="track" name="track" type="text" value="<%= @song.track %>" required>
+    <input id="name" name="name" type="text" value="<%= @song.name %>" required>
 
     <button type="submit">Update song</button>
   </form>
