--- a/views/album.erb
+++ b/views/album.erb
@@ -1,34 +1,37 @@
-<% if @album %>
-  <h2>Album Name: <%= @album.name %></h2>
+<h2>Album: <%= @album.name %></h2>
 
-  <h3>Album Songs</h3>
-
-    <% if @album.songs %>
-      <ol>
-        <% @album.songs.each do |song| %>
-          <li><a href="/albums/<%= @album.id %>/songs/<%= song.id %>"><%= song.name %></a></li>
-        <% end %>
-      </ol>
-    <% else %>
-      <p>There are no songs listed for this album yet.</p>
-    <% end %>
-
-  <h4>Add a song:</h4>
-
-  <form action="/albums/<%= @album.id %>/songs" method="post">
-    <div class="form-group">
-      <label for="song_track">Track</label>
-      <input id="song_track" name="song_track" type="text" required>
-      <label for="song_name">Song name</label>
-      <input id="song_name" name="song_name" type="text" required>
-    </div>
-    <button type="submit" class="btn">Add song</button>
-  </form>
-
-    <p><a href="/albums/<%= @album.id %>/edit">Edit album</a></p>
-    <p><a href="/albums">Return to album list</a></p>
-
+<% if @artist %>
+  <h4>Artist: <%= @artist.name %></h4>
 <% else %>
-  <h3>You're searching for an album that doesn't exist!</h3>
-  <a href="/albums">Take Me Home</a>
+  <h4>Add an artist:</h4>
+  <form id="add-artist" action="/albums/<%= @album.id %>/songs" method="post">
+    <div class="form-group">
+      <label for="artist_name">Artist name</label>
+      <input id="artist_name" name="artist_name" class="form-control" type="text" required>
+    </div>
+    <button form="add-artist" type="submit" class="btn">Add artist</button>
+  </form>    
 <% end %>
+
+<h3>Album Songs</h3>
+<% if @album.songs %>
+  <ul>
+    <% @album.songs.each do |song| %>
+      <li><a href="/albums/<%= @album.id %>/songs/<%= song.id %>"><%= song.name %></a></li>
+    <% end %>
+  </ul>
+<% else %>
+  <p>There are no songs listed for this album yet.</p>
+<% end %>
+
+<h4>Add a song:</h4>
+<form id="add-song" action="/albums/<%= @album.id %>/songs" method="post">
+  <div class="form-group">
+    <label for="song_name">Song name</label>
+    <input id="song_name" name="song_name" class="form-control" type="text" required>
+  </div>
+  <button form="add-song" type="submit" class="btn">Add song</button>
+</form>
+
+<p><a href="/albums/<%= @album.id %>/edit">Edit album</a></p>
+<p><a href="/albums">Return to album list</a></p>
