--- a/views/new_artist.erb
+++ b/views/new_artist.erb
@@ -5,5 +5,8 @@
     <label for="artist_name" >Artist name</label>
     <input id="artist_name" name="artist_name" class="form-control" type="text" required>
   </div>
-  <button type="submit" class="btn">Go!</button>
+  <button type="submit" class="btn">Add artist</button>
 </form>
+
+<p><a href="/artists">Return to artist list</a></p>
+<p><a href="/">Return home</a></p>
