--- a/views/edit_album.erb
+++ b/views/edit_album.erb
@@ -1,17 +1,17 @@
-<h1>Update <%=@album.name() %></h1>
+<h1>Update <%= @album.name %></h1>
 
-<form action="/albums/<%= @album.id() %>" method="post">
+<form action="/albums/<%= @album.id %>" method="post">
   <input name="_method" type="hidden" value="patch">
-
-  <label for="name">Rename album</label>
-  <input id="name" name="name" type="text" required>
-
+  <div class="form-group">
+    <label for="album_name">Rename album</label>
+    <input id="edit_album_name" name="album_name" class="form-control" type="text" value="<%= @album.name %>" required>
+  </div>
   <button type="submit">Update</button>
 </form>
 
-<form action="/albums/<%= @album.id() %>" method="post">
+<form action="/albums/<%= @album.id %>" method="post">
   <input name="_method" type="hidden" value="delete" required>
-
   <button type="submit">Delete album</button>
 </form>
+
 <p><a href="/albums">Return to album list</a></p>
