--- a/views/new_album.erb
+++ b/views/new_album.erb
@@ -3,7 +3,9 @@
 <form action="/albums" method="post">
   <div class="form-group">
     <label for="album_name">Album name</label>
-    <input id="n" name="album_name" class="form-control" type="text" required>
+    <input id="new_album_name" name="album_name" class="form-control" type="text" required>
   </div>
   <button type="submit" class="btn">Add album</button>
 </form>
+
+<p><a href="/albums">Return to album list</a></p>
