--- a/views/song.erb
+++ b/views/song.erb
@@ -5,9 +5,9 @@
   <form action="/albums/<%= @song.album.id %>/songs/<%= @song.id %>" method="post">
     <input name="_method" type="hidden" value="patch">
 
-    <label for="name">Rename song</label>
-    <input id="track" name="track" type="text" value="<%= @song.track %>" required>
-    <input id="name" name="name" type="text" value="<%= @song.name %>" required>
+    <label for="song_name">Rename song</label>
+    <input id="song_song_track" name="song_track" type="text" value="<%= @song.track %>" required>
+    <input id="song_song_name" name="song_name" type="text" value="<%= @song.name %>" required>
 
     <button type="submit">Update song</button>
   </form>
